<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp">

    <EditText
        android:id="@+id/etIdLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_card_id_label"
        android:focusable="false"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_card_name_label"
        android:focusable="false"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@+id/etIdLabel" />

    <EditText
        android:id="@+id/etBirthdayLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_card_birthday_label"
        android:focusable="false"
        android:clickable="true"
        android:maxLines="1"
        app:layout_constraintTop_toBottomOf="@+id/etNameLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>